[gd_scene load_steps=2 format=3 uid="uid://b4aggefuv0erd"]

[ext_resource type="Script" uid="uid://dhbl43rt2gxom" path="res://Scripts/UI/MainMenu.gd" id="1_g18y6"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g18y6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.21496893, 0.3361122, 0.45725554, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="BtnNewChar" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New Character"

[node name="BtnContinue" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="BtnOptions" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="BtnExit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/BtnNewChar" to="." method="_on_new_character_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnContinue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnOptions" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnExit" to="." method="_on_exit_pressed"]
